src/objects/ADvendio__MediaCampaignTeamMember__c.object
<CustomObject>
    <description>This object stores information about the media campaign team members, their respectable roles and if applicable their split amount or ratio for their sales commission.</description>
    <fields>
        <fullName>ADvendio__MediaCampaignAccessLevel__c</fullName>
        <description>Field stores the access rights for the team member: Edit or Read only.</description>
        <label>Media Campaign Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                    <default>true</default>
                    <label>Read</label>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <description>Reference to the relavant media campaign</description>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>Media Campaign Team Members</relationshipLabel>
        <relationshipName>MediaCampaignTeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__SplitAmountForecast__c</fullName>
        <description>Use this field if you are working with Forecasts and revenue splits and want to split by a fixed amount instead of a ratio.</description>
        <label>Split Amount (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__SplitRatioForecast__c</fullName>
        <description>Use this field if you are working with Forecasts and revenue splits and want to split by a ration instead of fixed amount.</description>
        <label>Split Ratio (%) (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__TeamMemberRole__c</fullName>
        <description>This picklists stores customizable roles for your team members.</description>
        <label>Team Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep.</fullName>
                </value>
                <value>
                    <fullName>Ad operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the Salesforce User responsible for the Media Campaign.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Media Campaign Team Members</relationshipLabel>
        <relationshipName>MediaCampaignTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Media Campaign Team Member</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>ADvendio__TeamMemberRole__c</columns>
        <columns>ADvendio__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MTM{0}</displayFormat>
        <label>Media Campaign Team Member No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Campaign Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>